--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to My Page</h1>
     <p>This is a simple HTML document.</p>
+
+    <h1>Hii from the netligent</h1>
+    <h1>techlogies...</h1>
     <script>
         console.log("Hello, World!");
     </script>
